--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -98,7 +98,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Submission:** Submit this notebook via Blackboard by the end of the day.  \n",
+        "**Submission:** Submit this notebook and a PDF of all output via Blackboard by the end of the day.  \n",
         "\n",
         "\n"
       ]
