--- a/labs/Lab5.ipynb
+++ b/labs/Lab5.ipynb
@@ -58,16 +58,16 @@
         "# Read in the data from a URL; works for small datasets\n",
         "train_url = \"https://github.com/eickholtj/CPS580/raw/master/data/YearPredictionMSD.train.txt\"\n",
         "train_data_file = urllib.urlopen(train_url)\n",
-        "train_data = np.loadtxt(file)\n",
+        "train_data = np.loadtxt(train_data_file, delimiter=',')\n",
         "\n",
         "# Read in the data from a URL; works for small datasets\n",
         "test_url = \"https://github.com/eickholtj/CPS580/raw/master/data/YearPredictionMSD.test.txt\"\n",
         "test_data_file = urllib.urlopen(test_url)\n",
-        "test_data = np.loadtxt(file)\n",
+        "test_data = np.loadtxt(test_data_file, delimiter=',')\n",
         "\n",
         "# Process data, train and evaluate model "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
